# scales

./: .gitignore  CMakeLists.txt  InstrumentNote.cpp  InstrumentNote.h  MajorScale.cpp  MajorScale.h  MinorScale.cpp  MinorScale.h  MusicalInstrument.cpp  MusicalInstrument.h  MusicalInstrumentRenderer.cpp  MusicalInstrumentRenderer.h  MusicalInstrumentRendererText.cpp  MusicalInstrumentRendererText.h  MusicalNote.cpp  MusicalNote.h  MusicalScale.cpp  MusicalScale.h  ToggleNote.cpp  ToggleNote.h  main.cpp
include/: InstrumentNote.h  MusicalInstrument.h  MusicalInstrumentRenderer.h  MusicalInstrumentRendererText.h  MusicalNote.h  MusicalScale.h  ToggleNote.h
instruments/: BassGuitar.cpp  Guitar.cpp  Guitar.h  GuitarFamily.cpp  InstrumentString.cpp  InstrumentString.h  Piano.cpp  Piano.h
instruments/include/: BassGuitar.h  Guitar.h  GuitarFamily.h  InstrumentString.h  Piano.h
public_include/: Instruments.h  MusicalScales.h  Scales.h
public_include/include/: Instruments.h  Renderers.h  Scales.h
renderers/: GuitarRendererText.cpp  GuitarRendererText.h  PianoRendererText.cpp
renderers/include/: GuitarRendererText.h  PianoRendererText.h
scales/: ChromaticScale.cpp  DominantDiminished.cpp  DominantDiminished.h  FullyDiminished.cpp  FullyDiminished.h  HarmonicMinorScale.cpp  Major.cpp  Major.h  MajorScale.cpp  MelodicMinorScale.cpp  Minor.cpp  Minor.h  MinorScale.cpp  NaturalMajorScale.cpp  NaturalMinorScale.cpp
scales/include/: ChromaticScale.h  DominantDiminished.h  FullyDiminished.h  HarmonicMinorScale.h  Major.h  MajorScale.h  MelodicMinorScale.h  Minor.h  (+3 more)
